# aaaaaaaaaaa

./: README.md  functions.txt  install.sh  opiumware.js  opiumwareapi.js  tailwind.config.js  update-notes.txt  updateversion.json
.github/workflows/: tauri-macos.yml
opiumwareui/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
opiumwareui/public/: opiumwareapi.js
opiumwareui/src/: App.tsx  Index.css  main.tsx  types.ts  utils.ts
opiumwareui/src-tauri/: Cargo.toml  tauri.conf.json
opiumwareui/src-tauri/src/: main.rs
opiumwareui/src/components/: Editor.tsx  NoteList.tsx  Sidebar.tsx
